prepare release notes for eb411

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,8 +3,74 @@ For more detailed information, please see the git log.
 
 These release notes can also be consulted at http://easybuild.readthedocs.org/en/latest/Release_notes.html.
 
-The latest version of easybuild-easyconfig provides 8,748 easyconfig files, for 1,771 different software packages,
+The latest version of easybuild-easyconfig provides 8,964 easyconfig files, for 1,798 different software packages,
 incl. 31 different (compiler) toolchains.
+
+v4.1.1 (January 16th 2020)
+--------------------------
+
+update/bugfix release
+
+- added example easyconfig files for 27 new software packages:
+  - Autoconf-archive (#9658), breseq (#9603), CrossMap (#9483), CSBDeep (#9560), CNT-ILP (#9323), cytoolz (#9453), Faber (#9553),
+    Fiji (#8748), GARLI (#9404), Globus-CLI (#9565), GtkSourceView (#9526), gradunwarp (#9648), gsettings-desktop-schemas (#9529),
+    HyPhy (#9405), horton (#7449), IGMPlot (#9438), LEMON (#9323), Meld (#9530), mhcflurry (#9554), NCIPLOT (#9419), ncl (#9632),
+    OpenSlide (#9499), openslide-python (#9499), pythran (#9594), Qualimap (#9411), TinyDB (#9555), TreeShrink (#9381)
+- added additional easyconfigs for various supported software packages, including:
+  - Anaconda2 2019.10, Anaconda3 2019.10, Autoconf archive, Autoconf 2.69, Automake 1.16.1, Autotools 20180311, arpack ng, Beast 1.10.4, Boost.Python 1.71.0, barrnap 0.9, breseq 0.35.0, bx python, CDO 1.9.8, CNT ILP, CRPropa 3.1.5, CSBDeep 0.4.1, CSBDeep 0.4.1, Clang 9.0.1, Clang 9.0.1, ConnectomeWorkbench 1.3.2, CrossMap 0.3.9, cairo 1.16.0, cuDNN 7.6.4.38, cytoolz 0.10.1, DCMTK 3.6.5, deepTools 3.3.1, EMBOSS 6.6.0, ESMF 8.0.0, EasyBuild 4.1.0, ecCodes 2.15.0, FFTW 3.3.8, FLTK 1.3.5, FSL 6.0.2, FSL 6.0.2, FSL 6.0.3, Faber 0.3, Fiji 20170530, Fiji 20191119, fastp 0.20.0, fastp 0.20.0, freeglut 3.2.1, GARLI 2.01, GDAL 3.0.0, GDAL 3.0.2, GEOS 3.7.2, GEOS 3.8.0, GLibmm 2.49.7, GLibmm 2.49.7, GROMACS 2019.3, GROMACS 2019.3, GROMACS 2019.4, GSL 2.6, GSL 2.6, GTS 0.7.6, Ghostscript 9.50, GitPython 3.0.3, Globus CLI, GtkSourceView 3.24.11, GtkSourceView 4.4.0, Guile 1.8.8, Gurobi 9.0.0, Gurobi 9.0.0, Gurobi 9.0.0, g2clib 1.6.0, g2clib 1.6.0, g2lib 3.1.0, g2lib 3.1.0, gc 7.6.12, gettext 0.20.1, gffread 0.11.6, glibc 2.30, gradunwarp 1.1.0, gradunwarp 1.1.0, gsettings desktop, HDF 4.2.14, HDF5 1.10.5, HPL 2.3, Horovod 0.18.2, HyPhy 2.5.1, horton 2.1.1, horton 2.1.1, hwloc 2.1.0, ICU 64.2, ICU 65.1, IGMPlot 2.4.2, IGMPlot 2.4.2, ITSTool 2.0.6, ImageMagick 7.0.9, iccifort 2020.0.166, iimpi 2020.00, imkl 2020.0.166, impi 2019.6.166, intel 2020.00, Java 1.8.0_231, Jellyfish 2.3.0, Julia 1.3.1, jemalloc 5.2.1, KMC 3.1.1, LEMON 1.3.1, LibTIFF 4.1.0, Libint 2.0.3, Libint 2.0.3, LittleCMS 2.9, libcerf 1.13, libgd 2.2.5, libgeotiff 1.5.1, libiconv 1.16, libiconv 1.16, libmatheval 1.1.11, libpciaccess 0.16, libsigc++ 2.10.2, libsndfile 1.0.28, libtool 2.4.6, libunistring 0.9.10, libxc 2.2.2, libxc 2.2.2, libxml++ 2.40.1, libxml++ 2.40.1, libxml2 python, libxml2 2.9.10, libxslt 1.1.34, lpsolve 5.5.2.5, lxml 4.4.2, MACS2 2.2.5, MDTraj 1.9.3, MRtrix 3.0, MRtrix 3.0, Meld 3.20.1, Mesquite 2.3.0, Mothur 1.43.0, make 4.2.1, makedepend 1.0.6, mayavi 4.7.1, mhcflurry 1.2.4, mhcflurry 1.2.4, molmod 1.4.5, NCIPLOT 4.0, NCL 6.6.2, NCL 6.6.2, NLopt 2.6.1, ncl 2.1.18, ncview 2.1.7, netCDF C++4, netCDF Fortran, netCDF 4.7.1, netCDF 4.7.1, netCDF 4.7.1, networkx 2.4, numactl 2.0.13, ORCA 4.2.1, OpenFOAM Extend, OpenFOAM 6, OpenFOAM 7, OpenFOAM v1912, OpenMM 7.4.1, OpenMM 7.4.1, OpenMPI 4.0.2, OpenSlide 3.4.1, openslide python, ownCloud 2.5.4, PLUMED 2.5.3, PROJ 6.2.1, ParMETIS 4.0.3, ParMGridGen 1.0, Pillow SIMD, PyCairo 1.18.0, PyCharm 2019.3.1, PyGObject 3.34.0, pixman 0.38.4, plotly.py 4.4.1, pocl 1.4, pocl 1.4, prokka 1.14.5, pyBigWig 0.3.17, pydicom 1.2.2, pythran 0.9.4.post1, QUAST 5.0.2, Qualimap 2.2.1, QuickFF 2.2.4, Qwt 6.1.4, Qwt 6.1.4, R 3.6.2, R 3.6.2, ReFrame 2.20, SAMtools 1.10, SCOTCH 6.0.9, SUNDIALS 5.1.0, SWIG 4.0.1, Salmon 1.0.0, Sambamba 0.7.1, SuiteSparse 5.6.0, scikit learn, seqtk 1.3, snakemake 5.7.1, TinyDB 3.15.2, TreeShrink 1.3.2, tbl2asn 25.8, tcsh 6.22.02, tcsh 6.22.02, texinfo 6.7, time 1.9, torchvision 0.4.2, UDUNITS 2.2.26, WPS 4.0.1, WPS 4.0.2, WPS 4.1, WRF 4.0.1, WRF 4.0.2, WRF 4.1.3, worker 1.6.11, XZ 5.2.4, xorg macros, xprop 1.2.4, xproto 7.0.31, YAXT 0.6.2, yaff 1.6.0
+- added easyconfigs for intel/2020.00 toolchain (#9575)
+- minor enhancements, including:
+  - add POWER9 support to CUDA 10.1 easyconfigs (#9442)
+  - build CMake in parallel (#9543)
+  - use NCCL for GPU ops in Horovod 0.18.2 easyconfig (#9562)
+  - use alias to ensure the OpenBLAS library is used for pythran (#9594)
+- various bug fixes, including:
+  - fix remote launch of broker and workers for SCOOP (#9366)
+  - fix failing sanity check for NCL 6.6.2 due to missing dependencies (+ add easyconfig using foss/2018b) (#9388)
+  - add missing 'wheel' extensions to Spark 2.4.0 easyconfig using intel/2018b toolchain (#9424)
+  - add missing OS dependencies in Java 1.8 easyconfig used on POWER systems (#9454)
+  - fix build of recent Bazel versions on Power9 + stick to Java/1.8 as dependency (#9455)
+  - fix CMake 3.15.3 build on Power (+ enable building in parallel) (#9469)
+  - fix source URLs in xorg-macros easyconfigs (#9477, #9578)
+  - add missing wcwidth extension to Python 2.7.15 + 2.7.16 easyconfigs & enable 'pip check' in sanity check (#9479)
+  - disable running of 'sudo apt-get update' in GitHub CI config, since it's failing (and we don't really need it) (#9492)
+  - remove (wrong) GI_TYPELIB_PATH and XDG_DATA_DIRS (#9528)
+  - use xorg-macros as dependency in X11 easyconfigs (rather than installing it as a bundle component) (#9546)
+  - fix lpsymphony extension for R-bundle-Bioconductor (#9548)
+  - add correct 'old-versions' source URL to all Mesa easyconfigs (#9569)
+  - add missing checksums for Armadillo (#9572)
+  - only require sanity_pip_check if use_pip is enabled too (fixes #9563) (#9576)
+  - also define $AUGUSTUS_BIN_PATH and $AUGUSTUS_SCRIPTS_PATH in generated module file for AUGUSTUS (#9579)
+  - add SSL OS dependencies for GDAL 3.0.0 (#9586)
+  - add missing jupyter_contrib_core extension for IPython 7.7.0+ + consistently include jupyter_nbextensions_configurator extension (#9587)
+  - patch libcxx (Clang 8.0.0) on pcc64le for incomplete IBM128 long double in GCC (#9590)
+  - patch for GCCcore 8.2.0 to fix '__float128 is not supported on this target' on ppc64le (#9591)
+  - fix name for plotly extension in plotly.py v4.4.1 easyconfig (#9599)
+  - fix broken easyconfigs for cyvcf2 v0.11.5 by adding missing 'monotonic' extension (#9601)
+  - use absolute path for extraction to allow relocating the build dir for g2log-1.0 (#9604)
+  - update checksum for kallisto-0.43.1 (#9611)
+  - fix https// -> https:// in GConf, GST-plugins-base, GStreamer, Graphene, HarfBuzz, Pango easyconfigs (#9615)
+  - add additional valid checksum for MASS 7.3-51.4 extension in R 3.6.0 easyconfigs (#9621)
+  - update ctffind website (#9622)
+  - make sure we use easybuild Clang in pocl easyconfigs (#9624)
+  - make postinstallcmds independent of PWD in OpenCV 3.1.0 easyconfigs (#9628)
+  - update source_urls to include old releases folder in libsodium easyconfigs (#9632)
+  - fix source URLs for ant v1.10.5 - v1.10.7 (#9633)
+  - allow missing python versionsuffix for existing easyconfig files changed in PRs (#9634)
+  - update URLs to new location of libxc (#9635)
+  - use pip to install gradunwarp 1.1.0 (HCP fork) (#9637)
+  - use latest master as release candidate of MRtrix 3.0 (since 3.0_RC4 is not an official release) (#9638)
+  - add second checksum for rda_1.0.2-2.1.tar.gz in R 3.6.0 (#9644)
+  - update source URLs in QCA 2.1.0 easyconfigs (#9647)
+  - fix Python 3.5.1 easyconfig (bitstring 3.1.3 sources no longer available on PyPI) (#9649)
+  - fix tesseract 4.1.0 dependencies (#9650)
+  - make ICU 64.2 depend on Python3 instead of 2 (#9652)
+  - use True rather than 'True' for boolean easyconfig parameters (#9657)
+- other changes:
+  - require that sanity_pip_check is enabled in new/changed easyconfigs (#9516)
+  - revert "WORKAROUND: Remove check for Python suffix to make CI pass for old ECs (#9577)
+  - update copyright statements for 2020 (#9598)
+
 
 v4.1.0 (December 4th 2019)
 --------------------------
