tweak release notes for v4.2.0

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,7 +3,7 @@ For more detailed information, please see the git log.
 
 These release notes can also be consulted at http://easybuild.readthedocs.org/en/latest/Release_notes.html.
 
-The latest version of easybuild-easyconfig provides 8,964 easyconfig files, for 1,798 different software packages,
+The latest version of easybuild-easyconfig provides 9,462 easyconfig files, for 1,912 different software packages,
 incl. 31 different (compiler) toolchains.
 
 v4.2.0 (April 14th 2020)
@@ -12,44 +12,75 @@ v4.2.0 (April 14th 2020)
 feature release
 
 - added example easyconfig files for 114 new software packages:
-  - ABRA2 (#10272), ABRicate (#10310), ADIOS (#10036), ArviZ (#10366), aNCI (#9929), any2fasta (#10310), apex (#10269), archspec (#9898), autopep8 (#9626), BAMSurgeon (#10330), BSMAPz (#10283), BSseeker2 (#10039), BUStools (#9838), BatMeth2 (#10323), BiG-SCAPE (#10352), BinSanity (#10001), Bonito (#10269), CGmapTools (#10288), Cbc (#10052), Cgl (#10048), Clp (#10033), CoinUtils (#9937), dtcwt (#9695), ELSI (#9857), EnsEMBLCoreAPI (#8734), FigureGen (#10076), Fiona (#10321), FuSeq (#10004), fastq-pair (#9894), GRASP (#9896), GenomeTools (#9797), GraphMap2 (#10299), Groovy (#9809), gsport (#9821), gubbins (#9689), iVar (#10291), igv-reports (#9977), inferCNV (#9686), JupyterLab (#9752), joypy (#10212), kma (#10259), LAMMPS (#10371), LtrDetector (#10343), lancet (#10271), libBigWig (#10006), libGridXC (#9858), libPSML (#5859), MedPy (#9748), Mini-XML (#10036), Monocle3 (#9825), MoreRONN (#10255), manta (#5104), medImgProc (#10228), mkl_fft (#9887), motionSegmentation (#10228), ntHits (#9833), NanoFilt (#10212), ntEdit (#9836), ngspice (#9922), nanomath (#10212), nanoget (#10212), NanoPlot (#10212), NanoComp (#10212), OCNet (#9955), OpenAI-Gym (#10347), OpenPIV (#9959), OpenPyXL (#10115), Osi (#10361), occt (#9939), orca (#9518), PRSice (#9988), PartitionFinder (#9983), PyMC3 (#10279), PyRe (#10095), PyTorch-Geometric (#9995), pauvre (#10212), polymake (#9904), pretty-yaml (#10041)), pycodestyle (#9626), pydot (#9899), pygraphviz (#9969), pylift (#10051), pyparsing (#9983), python-weka-wrapper3 (#9704), qcat (#10244), RAxML-NG (#9990), Ray (#10302), Red (#9856), rclone (#7934), rstanarm (#9964), SECAPR (#9721), SEPP (#10047), SLATEC (#7529), SSN (#9955), STEAK (#10337), SVG (#9905), SentencePiece (#10192), Shapely (#10309), Singular (#10030), scVelo (#9805), scikit-build (#9762), segmentation-models (#10211), spatialreg (#9767), split-seq (#9749), spoa (#9705), stpipeline (#9736), Togl (#9868), torchtext (#10193), UQTk (#10279), units (#9682), Winnowmap (#10005), WildMagic (#10044), xtb (#9993), Zip (#9972)
+  - ABRA2 (#10272), ABRicate (#10310), ADIOS (#10036), aNCI (#9929), any2fasta (#10310), apex (#10269),
+    archspec (#9898), ArviZ (#10366), autopep8 (#9626), BAMSurgeon (#10330), BatMeth2 (#10323),
+    BiG-SCAPE (#10352), BinSanity (#10001), Bonito (#10269), BSMAPz (#10283), BSseeker2 (#10039),
+    BUStools (#9838), Cbc (#10052), Cgl (#10048), CGmapTools (#10288), Clp (#10033), CoinUtils (#9937),
+    dtcwt (#9695), ELSI (#9857), EnsEMBLCoreAPI (#8734), fastq-pair (#9894), FigureGen (#10076), Fiona (#10321),
+    FuSeq (#10004), GenomeTools (#9797), GraphMap2 (#10299), GRASP (#9896), Groovy (#9809), gsport (#9821),
+    gubbins (#9689), igv-reports (#9977), inferCNV (#9686), iVar (#10291), joypy (#10212), JupyterLab (#9752),
+    kma (#10259), LAMMPS (#10371), lancet (#10271), libBigWig (#10006), libGridXC (#9858), libPSML (#5859),
+    LtrDetector (#10343), manta (#5104), medImgProc (#10228), MedPy (#9748), Mini-XML (#10036), mkl_fft (#9887),
+    Monocle3 (#9825), MoreRONN (#10255), motionSegmentation (#10228), NanoComp (#10212), NanoFilt (#10212),
+    nanoget (#10212), nanomath (#10212), NanoPlot (#10212), ngspice (#9922), ntEdit (#9836), ntHits (#9833),
+    occt (#9939), OCNet (#9955), OpenAI-Gym (#10347), OpenPIV (#9959), OpenPyXL (#10115), orca (#9518),
+    Osi (#10361), PartitionFinder (#9983), pauvre (#10212), polymake (#9904), pretty-yaml (#10041)),
+    PRSice (#9988), pycodestyle (#9626), pydot (#9899), pygraphviz (#9969), pylift (#10051), PyMC3 (#10279),
+    pyparsing (#9983), PyRe (#10095), python-weka-wrapper3 (#9704), PyTorch-Geometric (#9995), qcat (#10244),
+    RAxML-NG (#9990), Ray (#10302), rclone (#7934), Red (#9856), rstanarm (#9964), scikit-build (#9762),
+    scVelo (#9805), SECAPR (#9721), segmentation-models (#10211), SentencePiece (#10192), SEPP (#10047),
+    Shapely (#10309), Singular (#10030), SLATEC (#7529), spatialreg (#9767), split-seq (#9749), spoa (#9705),
+    SSN (#9955), STEAK (#10337), stpipeline (#9736), SVG (#9905), Togl (#9868), torchtext (#10193),
+    units (#9682), UQTk (#10279), WildMagic (#10044), Winnowmap (#10005), xtb (#9993), Zip (#9972)
 - added additional easyconfigs for various supported software packages, including:
-  - ABRA2 2.22, ABRicate 0.9.9, ABRicate 0.9.9, ABySS 2.1.5, ADIOS 1.13.1, ANTs 2.3.2, ASE 3.19.0, ASE 3.19.0, ASE 3.19.0, ASE 3.19.0, ATK 2.34.1, AUGUSTUS 3.3.3, Arrow 0.16.0, ArviZ 0.7.0, aNCI 2.0, any2fasta 0.4.2, any2fasta 0.4.2, apex 20200325, archspec 0.1.0, argtable 2.13, arpack ng, at spi2, at spi2, autopep8 1.4.4, awscli 1.17.7, BAMSurgeon 1.2, BBMap 38.76, BCFtools 1.10.2, BEDTools 2.29.2, BLAST+ 2.9.0, BLAST 2.10.0, BLAT 3.5, BSMAPz 1.1.1, BSseeker2 2.1.8, BSseeker2 2.1.8, BUSCO 4.0.5, BUStools 0.40.0, BWA 0.7.17, BWA 0.7.17, BamTools 2.5.1, BamTools 2.5.1, BatMeth2 2.1, BayeScEnv 1.1, BayeScEnv 1.1, BerkeleyGW 2.1.0, BerkeleyGW 2.1.0, BiG SCAPE, BinSanity 0.3.5, Biopython 1.75, Bison 3.3.2, Bison 3.5.2.eb, Bison 3.5.3, Bison 3.5.3.eb, Blosc 1.17.1, Bonito 0.1.0, Bonito 0.1.0, Boost 1.71.0, Bowtie 1.2.3, Bowtie 1.2.3, Bowtie2 2.3.5.1, Bowtie2 2.3.5.1, binutils 2.34, binutils 2.34.eb, bokeh 1.4.0, bwa meth, bwidget 1.9.14, CGAL 4.14.1, CGmapTools 0.1.2, CVXPY 1.0.28, Cbc 2.10.3, Cgl 0.60.2, CharLS 2.1.0, CheckM 1.1.2, CheckM 1.1.2, Clang 10.0.0, Clp 1.17.3, Clustal Omega, CoinUtils 2.11.3, CppUnit 1.15.1, canu 1.9, crb blast, cutadapt 1.18, cutadapt 2.7, cutadapt 2.8, DB 18.1.32, DFT D3, DIAMOND 0.9.30, DIAMOND 0.9.30, DendroPy 4.4.0, dask 2.8.0, davix 0.7.5, dcm2niix 1.0.20190902, dtcwt 0.12.0, dtcwt 0.12.0, ELPA 2019.11.001, ELPA 2019.11.001, ELSI 2.5.0, ELSI 2.5.0, EMBOSS 6.6.0, EasyBuild 4.1.1.eb, EasyBuild 4.1.2.eb, EnsEMBLCoreAPI 96.0, FALCON 1.8.8, FastANI 1.3, FastME 2.1.6.1, FastME 2.1.6.1, FastQC 0.11.9, FastTree 2.1.11, Ferret 7.5.0, FigureGen 51, Fiona 1.8.13, Flye 2.6, FreeImage 3.18.0, FuSeq 1.1.2, fastp 0.20.0, fastq pair, flex 2.5.39, flex 2.6.4, GATK 4.1.4.1, GCC 9.2.0.eb, GCCcore 9.3.0.eb, GDAL 3.0.2, GDB 9.1, GEOS 3.8.0, GL2PS 1.4.0, GL2PS 1.4.0, GLPK 4.65, GMAP GSNAP, GObject Introspection, GObject Introspection, GPAW 20.1.0, GPAW 20.1.0, GRASP 2018, GROMACS 2020, GROMACS 2020, GTDB Tk, GTK+ 3.24.13, Gdk Pixbuf, GenomeTools 1.5.10, GenomeTools 1.5.10, GenomeTools 1.6.1, GenomeTools 1.6.1, Go 1.14.1.eb, Go 1.14.eb, Grace 5.1.25, Grace 5.1.25, Grace 5.1.25, Grace 5.1.25, Gradle 6.1.1.eb, GraphMap2 0.6.4, GraphicsMagick 1.3.34, GraphicsMagick 1.3.34, Graphviz 2.40.1, Graphviz 2.40.1, Graphviz 2.42.2, Graphviz 2.42.2, Groovy 2.5.9, Gurobi 9.0.0, Gurobi 9.0.1.eb, g2log 1.0, gSOAP 2.8.100, gnuplot 5.2.8, gperftools 2.7.90, gsport 1.4.2, gtest 1.10.0, gubbins 2.4.0.eb, gzip 1.10, HDDM 0.7.5, HTSlib 1.10.2, HTSlib 1.10.2, HarfBuzz 2.6.4, Horovod 0.18.2, Horovod 0.19.1, Hypre 2.18.2, Hypre 2.18.2, help2man 1.47.12, IGV 2.8.0, IPython 7.9.0, IPython 7.9.0, IQ TREE, IRkernel 1.1, IRkernel 1.1, ITK 5.0.1, iVar 1.0.1, iccifort 2020.0.166, igraph 0.8.0, igv reports, impi 2019.6.166, inferCNV 1.0.4, ispc 1.12.0.eb, JAGS 4.3.0, Java 1.8.0_241.eb, Java 11.0.6, Java 13.0.2.eb, Java 13.eb, Jellyfish 2.3.0, Julia 1.4.0, JupyterLab 1.2.5, JupyterLab 1.2.5, joypy 0.2.2, Kaiju 1.7.3, Keras 2.3.1, Keras 2.3.1, Kraken2 2.0.8, kallisto 0.46.1, kim api, kim api, kma 1.2.22, LAMMPS 3Mar2020, LAMMPS 3Mar2020, LAMMPS 7Aug2019, LAMMPS 7Aug2019, LAST 1045, LASTZ 1.04.03, LIBSVM 3.23, LLVM 10.0.0, LLVM 8.0.1, LLVM 9.0.1, LMfit 0.9.14, LS PrePost, LZO 2.10, LtrDetector 1.0, Lua 5.1.5, Lua 5.3.5, lancet 1.1.0, libBigWig 0.4.4, libGridXC 0.8.5, libPSML 1.1.8, libepoxy 1.5.4, libevent 2.1.11, libevent 2.1.11, libevent 2.1.8, libgpuarray 0.7.6, libharu 2.3.0, libidn 1.35, libpng 1.2.59.eb, libvdwxc 0.4.0, libxc 4.3.4, libxc 4.3.4, likwid 5.0.1, M4 1.4.18, MAFFT 7.453, MAFFT 7.453, MATLAB 2019b.eb, MCL 14.137, MMseqs2 10, MMseqs2 10, MUMPS 5.2.1, MUMPS 5.2.1, MUMPS 5.2.1, MUSCLE 3.8.1551, MariaDB connector, Maven 3.6.3.eb, MedPy 0.4.0, Meson 0.53.1, MethylDackel 0.5.0, Mini XML, Mono 6.8.0.105, Monocle3 0.2.0, MoreRONN 4.9, manta 1.1.1.eb, manta 1.6.0.eb, matplotlib 2.2.4, matplotlib 2.2.4, matplotlib 2.2.5, matplotlib 3.1.1, mayavi 4.7.1, medImgProc 2.5.7, medaka 0.11.4, medaka 0.12.0, mkl_fft 1.0.14, molmod 1.4.5, motif 2.3.8, motif 2.3.8, motif 2.3.8, motionSegmentation 2.7.9, NanoComp 1.10.1, NanoFilt 2.6.0, NanoPlot 1.28.4, Nextflow 19.12.0.eb, Nextflow 20.01.0.eb, nanoget 1.12.1, nanomath 0.23.1, ncdf4 1.17, netCDF Fortran, netcdf4 python, networkx 2.2, networkx 2.2, networkx 2.4, ngspice 31, nodejs 12.16.1, ntEdit 1.3.1, ntHits 0.0.1, numba 0.47.0, numba 0.47.0, numexpr 2.7.1, numexpr 2.7.1, OCNet 0.2.0, Octave 5.1.0, Octave 5.1.0, OpenAI Gym, OpenBLAS 0.3.8, OpenBabel 2.4.1, OpenBabel 3.0.0, OpenCV 4.2.0, OpenCV 4.2.0, OpenFOAM Extend, OpenFOAM 2.3.1, OpenFOAM v1912, OpenPIV 0.21.8, OpenPyXL 2.6.4, OrthoFinder 2.3.11, OrthoFinder 2.3.8, Osi 0.108.5, occt 7.3.0p4, openkim models, openkim models, orca 1.3.0, PETSc 3.12.3, PETSc 3.12.4, PETSc 3.12.4, PGI 19.10, PLUMED 2.5.3, PMIx 2.1.3, PMIx 2.2.1
+  - ABySS 2.1.5, Arrow 0.16.0, BCFtools 1.10.2, BEDTools 2.29.2, BUSCO 4.0.5, BerkeleyGW 2.1.0, binutils 2.34,
+    CVXPY 1.0.28, CharLS 2.1.0, CheckM 1.1.2, Clang 10.0.0, CppUnit 1.15.1, canu 1.9, cutadapt 2.8,
+    DIAMOND 0.9.30, davix 0.7.5, ELPA 2019.11.001, FastANI 1.3, FastQC 0.11.9, Ferret 7.5.0, GATK 4.1.4.1,
+    GCCcore 9.3.0, GDB 9.1, GMAP-GSNAP-2019-09-12, GObject-Introspection 1.63.1,  GPAW 20.1.0, GROMACS 2020,
+    GTDB-Tk 1.0.2, GTK+ 3.24.13, Go 1.14.1, Gradle 6.1.1, GraphicsMagick 1.3.34, Graphviz 2.42.2, Gurobi 9.0.1,
+    gSOAP 2.8.100, gnuplot 5.2.8, gtest 1.10.0, HDDM 0.7.5, HTSlib 1.10.2, HarfBuzz 2.6.4, Horovod 0.19.1,
+    Hypre 2.18.2, IGV 2.8.0, IQ-TREE 1.6.12, IRkernel 1.1, iccifort 2020.0.166, igraph 0.8.0, impi 2019.6.166,
+    ispc 1.12.0, Java 13(.0.2), Julia 1.4.0, Keras 2.3.1, Kraken2 2.0.8-beta, kim-api 2.1.3, LAST 1045,
+    LASTZ 1.04.03, LLVM 9.0.1 + 10.0.0, LMfit 0.9.14, LS-PrePost 4.7.8, likwid 5.0.1, MAFFT 7.453,
+    MATLAB 2019b, MMseqs2 10, Maven 3.6.3, Meson 0.53.1, MethylDackel 0.5.0, Mono 6.8.0.105, medaka 0.12.0,
+    Nextflow 20.01.0, ncdf4 1.17, netcdf4-python 1.5.3, nodejs 12.16.1, numba 0.47.0, numexpr 2.7.1,
+    Octave 5.1.0, OpenBLAS 0.3.8, OpenBabel 3.0.0, OpenCV 4.2.0, OpenFOAM-Extend 4.1-20191120, OrthoFinder 2.3.11,
+    PETSc 3.12.4, PGI 19.10, PMIx 2.2.1, Pango 1.44.7, PyTables 3.6.1, PyTorch 1.4.0, parasail 2.4.1,
+    pydicom 1.4.2, pyproj 2.4.2, Qhull 2019.1, QuantumESPRESSO 6.5, R-bundle-Bioconductor 3.10, RDKit 2019.09.3
+    Racon 1.4.10, ReFrame 2.21, Ruby 2.7.1, rjags 4-9, rpy2 3.2.6, SLEPc 3.12.2, SPAdes 3.14.0,
+    SPAdes 3.14.0, STAR-Fusion 1.8.1, STAR 2.7.3a, Seaborn 0.10.0, SeqAn 1.4.2, Seurat 3.1.2, SimpleElastix 1.1.0,
+    SimpleITK 1.2.4, Stacks 2.5, Stata 16, StringTie 2.1.0, scikit-optimize 0.7.4, statsmodels 0.11.0,
+    TensorFlow 1.15.2 + 2.0.1, Tkinter 2.7.16, Trim_Galore 0.6.5, Trimmomatic 0.39, Trinity 2.10.0, tbb 2020.2,
+    tqdm 4.41.1, XCrySDen 1.6.2, XGBoost 0.90, xarray 0.15.1, xmlf90 1.5.4,
 - minor enhancements, including:
-  - Java 11.0.6 on ppc64le and alter the Java 11 wrapper to support both x86_64 and ppc64le (#9371)
-  - add R package HiddenMarkov to R v3.6.0 + v3.6.2 (#9685)
+  - add easyconfig for Java 11.0.6 on ppc64le and alter the Java 11 wrapper to support both x86_64 and ppc64le (#9371)
+  - add additional extensions for R: HiddenMarkov (#9685), lmerTest (#9853), VSURF + Rborist (#10355)
   - change Mesa 19.1.7 + 19.2.1 easyconfigs to use custom easyblock for Mesa (#9764)
-  - Ghostscript: build shared libs and install header files (#9785)
-  - add lmerTest extension to R 3.6.2 easyconfigs (#9853)
-  - add MUMPS as dependency in PETSc 3.12.4 easyconfigs (#9880)
-  - Added Term::ReadLine::Gnu, which requires ncurses as a dependency (#9901)
+  - build shared libs and install header files for Ghostscript (#9785)
+  - add MUMPS as dependency in PETSc 3.12.4 easyconfigs (#9880, #9891)
+  - add Perl extensions: Term::ReadLine::Gnu (#9901), URI::Escape and Set::IntervalTree (#10049)
   - add dat directory to aNCI (#9929)
   - add patch to create a symlink from libsvm.so.$(SHVER) to libsvm.so in LIBSVM easyconfigs (#10045)
-  - Perl v5.28.1, v5.30.0: add modules URI::Escape and Set::IntervalTree (#10049)
-  - binutils 2.34 to use Bison 3.5.3 as build dep (#10061)
-  - enable building of Parquet + Snappy support in Arrow 0.16.0 easyconfig (#10102)
   - build SUNDIALS with 'pic' (#10278)
   - add BSgenome.Hsapiens.UCSC.hg38 + MEDIPS extensions to R-bundle-Bioconductor v3.10 (#10298)
-  - add VSURF + Rborist extensions to R 3.6.2 easyconfig (#10355)
-  - PyTorch: fix checksums of Intel sources that moved to oneAPI (#10367)
+  - fix checksums for mkl-dnn and tbb extensions (moved to oneAPI repo) in PyTorch easyconfigs (#10367)
+  - update Java/1.8 wrapper to Java/1.8.0_241.eb (#10305)
 - various bug fixes, including:
   - use CMake for building double-conversion (#9659)
-  - remove intel-specific sanity check for libdrm  (#9694)
+  - update recent libdrm easyconfigs to use custom easyblock & avoid hardcoded x86-specific sanity check (#9694)
   - add alternate checksum for OpenMolcas 18.09 (#9701)
   - use Github to download releases for MariaDB-connector-c (#9702)
   - add -DOMPI_SKIP_MPICXX in configopts for MathGL, to avoid using mpicxx during build (#9703)
+  - make installing independent of build folder in pybind11 easyconfig (#9738)
   - add Lua as a dependency to gnuplot (#9773)
   - stick to http:// source URLS for ISL in GCCcore easyconfigs, since https:// doesn't work (#9784)
   - add alternative checksums for farver/fracdiff/pkgmaker/rngtools/doRNG/cobs extensions in R 3.6.2 easyconfigs (#9789)
-  - downgrade dependency on ICU to 64.2 in HarfBuzz v2.6.4 (#9842)
   - add patch for OpenBLAS 0.3.4 w/ GCC/8.2.0-2.31.1 to fix broken tests (#9865)
-  - binutils: Revert removal of AVX512 vmovd with 64-bit operands (#9866)
+  - revert removal of AVX512 vmovd with 64-bit operands in binutils 2.32 easyconfigs (#9866)
   - fix inline asm in dscal: mark x, x1 as clobbered, in OpenBLAS 0.3.8 (#9867)
-  - add missing sanity_check_commands to cutadap v1.18 and v2.7 easyconfigs (#9869)
+  - add missing sanity_check_commands to cutadapt v1.18 and v2.7 easyconfigs (#9869)
   - don't overwrite configopts in BLAST+ easyconfigs, append to it (#9875)
-  - check for redefined easyconfig parameters in easyconfig tests (#9876)
-  - add alternate checksum for LaplacesDemon in R 3.6.2 easyconfigs (#9879)
-  - add back direct dependency on METIS in PETSc 3.12.4 easyconfigs (#9891)
+  - add alternate checksum for LaplacesDemon in R 3.6.x easyconfigs (#9879, #10382)
   - fix redefining of preconfigopts in OpenCV easyconfigs (#9895)
   - use symlinks for terminfo files instead of hard links in ncurses 6.1 easyconfigs (#9912)
   - fix NCIPLOT build flags (#9915)
@@ -57,42 +88,29 @@ feature release
   - use checkout@v2 in GitHub Actions to fix broken re-triggered tests (#9925)
   - re-enable building utils in Siesta 4.1-MaX-1.0 release (#9936)
   - fix homepage and source URLs in SLEPc easyconfigs by using https (#9943)
-  - fix broken tests due to multiple TensorFlow versions being used as dependency in 2019b generation by using TensorFlow 2.1.0 as dep for PlasFlow (#9947)
   - fix source URLs for rgeos after source tarball was moved to CRAN archive (#9954)
   - add dependencies on Python 3 and SciPy-bundle in Trinity v2.9.1 easyconfig (#9957)
   - patch GCC lisanitizer for glibc 2.31 (#9966)
   - add Zip as build dependency for recent Bazel versions (#9972)
   - fix checksums in Jellyfish v2.3.0 easyconfigs (#9997)
   - fix source URLs for ParMGridGen easyconfigs (#10019)
-  - disable unintended octave support in all libsndfile easyconfigs (#10027)
-  - fix sources for LS-PrePost 4.6 + add LS-PrePost 4.7.8 (#10236)
+  - disable unintended Octave support in all libsndfile easyconfigs (#10027)
+  - fix sources for LS-PrePost 4.6 (#10236)
+  - security update for vsc-mympirun 4.1.9 (#10185)
   - configure libwebp to also install libwebpmux (#10274)
-  - ensure separate_build_dir is set to False for ITK and elastix components in SimpleElastix easyconfig (#10300)
   - ensure that CVS easyconfigs are included in source tarball produced by 'python setup.py sdist' (#10326)
-  - re-enable 'apt-get update' + use '-o Acquire::Retries=3' to dance around Azure connectivity issues (#10336)
-  - use apt-spy2 before using apt in GitHub Actions (#10341)
   - fix undefined reference error due to libxc 4.3.4 built with CMake (#10356)
   - fix source_urls for tbb: use (new) official 'oneapi-src' GitHub repository (#10361)
-  - stop using apt-spy2 to pick an alternative mirror, it's expensive and may result in picking a faulty mirror (#10374)
   - add missing build dependency on pkg-config in GObject-Introspection 1.63.1 w/ Python 3.7.4 easyconfig (#10380)
-  - also add alternative checksum for LaplacesDemon extension in R 3.6.0 easyconfigs (#10382)
+  - update checksums and homepage in tbb easyconfigs (#10285)
 - other changes:
-  - make installing independent of build folder in pybind11 easyconfig (#9738)
-  - use custom easyblock for installing CMake in easyconfig for CMake 3.15.3 (#9871)
-  - use new custom easyblock in CMake easyconfigs (#9923)
+  - use new custom easyblock in recent CMake easyconfigs (#9871, #9923)
+  - add check for redefined easyconfig parameters in easyconfig tests (#9876)
   - use M4-1.4.18.eb for test installation in easyconfigs test suite (#9926)
-  - stick to GCCcore toolchain for RDFlib, no need for a full toolchain (#9975)
   - use https in homepage/source_urls of zlib-1.2.11.eb (#10018)
-  - fix homepage/description for PyTorch-Geometric (#10020)
-  - Kraken2 updated to version 2.0.8, together with dependencies (#10024)
-  - remove PlasFlow easyconfig, doesn't work with TensorFlow 1.5 or rpy2 3.x (at least not without extra work) (#10028)
   - add -GCCcore-9.2.0 versionsuffix for intel/2020.00 components (#10083)
-  - security update for vsc-mympirun 4.1.9 (#10185)
   - add checksum of new tbb 2019_U9 source tarball, next to original one + update homepage (#10237)
   - add comment informing about manually setting Gallium drivers in easyconfigs for Mesa v19.1.7 and v19.2.1 (#10276)
-  - update checksums and homepage in tbb easyconfigs (#10285)
-  - stick to using GCC/8.3.0 as toolchain for BCFtools (#10328)
-  - disable apt-get update (again) in GA workflow (#10340)
 
 
 v4.1.1 (January 16th 2020)
